--- a/index.html
+++ b/index.html
@@ -68,8 +68,8 @@
                         <a class="portfolio-box" href="assets/img/portfolio/fullsize/1.jpg" title="Project Name">
                             <img class="img-fluid" src="assets/img/portfolio/thumbnails/1.jpg" alt="..." />
                             <div class="portfolio-box-caption">
-                                <div class="project-category text-white-50">Category</div>
-                                <div class="project-name">Project Name</div>
+                                <div class="project-category text-white-50">Project 1</div>
+                                <div class="project-name">Philadelphia Schools & Bike Network</div>
                             </div>
                         </a>
                     </div>
@@ -77,8 +77,8 @@
                         <a class="portfolio-box" href="assets/img/portfolio/fullsize/2.jpg" title="Project Name">
                             <img class="img-fluid" src="assets/img/portfolio/thumbnails/2.jpg" alt="..." />
                             <div class="portfolio-box-caption">
-                                <div class="project-category text-white-50">Category</div>
-                                <div class="project-name">Project Name</div>
+                                <div class="project-category text-white-50">Project 2</div>
+                                <div class="project-name">Crime & Airbnb Availability in Chicago</div>
                             </div>
                         </a>
                     </div>
@@ -86,8 +86,8 @@
                         <a class="portfolio-box" href="assets/img/portfolio/fullsize/3.jpg" title="Project Name">
                             <img class="img-fluid" src="assets/img/portfolio/thumbnails/3.jpg" alt="..." />
                             <div class="portfolio-box-caption">
-                                <div class="project-category text-white-50">Category</div>
-                                <div class="project-name">Project Name</div>
+                                <div class="project-category text-white-50">Project 3</div>
+                                <div class="project-name">Access to Healthy Food in Philadelphia</div>
                             </div>
                         </a>
                     </div>
