--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
             <div class="container-fluid p-0">
                 <div class="row g-0">
                     <div class="col-lg-4 col-sm-6">
-                        <a class="portfolio-box" href="Project1" title="Project 1">
+                        <a class="portfolio-box" href="Project1.html" title="Project 1">
                             <img class="img-fluid" src="assets/img/portfolio/thumbnails/1.jpg" alt="..." />
                             <div class="portfolio-box-caption">
                                 <div class="project-category text-white-50">Project 1</div>
