--- a/SchoolsBikePaths.html
+++ b/SchoolsBikePaths.html
@@ -34,7 +34,7 @@
     <div class="container">
         <h1>Welcome to My GitHub Page</h1>
         <p>This is a simple GitHub page with text and an image.</p>
-        <img src="example.jpg" alt="Example Image">
+        <img src="map1.jpg" alt="Example Image">
     </div>
 </body>
 </html>
