--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
             <div class="container-fluid p-0">
                 <div class="row g-0">
                     <div class="col-lg-4 col-sm-6">
-                        <a class="portfolio-box" href="maps/map1.md" title="Project 1">
+                        <a class="portfolio-box" href="https://drive.google.com/file/d/1rgN0Io2al79UAjnfsGlD9aP_WVXz4IPd/view?usp=drive_link" title="Project 1">
                             <img class="img-fluid" src="assets/img/portfolio/thumbnails/1.jpg" alt="..." />
                             <div class="portfolio-box-caption">
                                 <div class="project-category text-white-50">Project 1</div>
@@ -74,7 +74,7 @@
                         </a>
                     </div>
                     <div class="col-lg-4 col-sm-6">
-                        <a class="portfolio-box" href="assets/img/portfolio/fullsize/2.jpg" title="Project 2">
+                        <a class="portfolio-box" href="https://drive.google.com/file/d/10I4Q0nP-t2qgvGbdcM9I9aa2SnlH4v0E/view?usp=drive_link" title="Project 2">
                             <img class="img-fluid" src="assets/img/portfolio/thumbnails/2.jpg" alt="..." />
                             <div class="portfolio-box-caption">
                                 <div class="project-category text-white-50">Project 2</div>
@@ -83,7 +83,7 @@
                         </a>
                     </div>
                     <div class="col-lg-4 col-sm-6">
-                        <a class="portfolio-box" href="assets/img/portfolio/fullsize/3.jpg" title="Project 3">
+                        <a class="portfolio-box" href="https://drive.google.com/file/d/1HeGPSLi-_h3XJBUYVanwdu6nkj8Y1B1w/view?usp=drive_link" title="Project 3">
                             <img class="img-fluid" src="assets/img/portfolio/thumbnails/3.jpg" alt="..." />
                             <div class="portfolio-box-caption">
                                 <div class="project-category text-white-50">Project 3</div>
