--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
                     <div class="col-lg-8 text-center">
                         <h2 class="text-white mt-0">Explore my GIS portfolio.</h2>
                         <hr class="divider divider-light" />
-                        <p class="text-white-75 mb-4">These maps were createed as part of the Fundamentals of GIS course at Temple University. Below, you will find three mapping projects and the stories behind them.</p>
+                        <p class="text-white-75 mb-4">These maps were created as part of the Fundamentals of GIS course at Temple University. Below, you will find three mapping projects and the stories behind them.</p>
                     </div>
                 </div>
             </div>
