--- a/index.html
+++ b/index.html
@@ -65,8 +65,7 @@
             <div class="container-fluid p-0">
                 <div class="row g-0">
                     <div class="col-lg-4 col-sm-6">
-                    <a href="https://drive.google.com/file/d/1rgN0Io2al79UAjnfsGlD9aP_WVXz4IPd/view?usp=drive_link" class="portfolio-box">
-                        <img src="assets/img/portfolio/thumbnails/1.jpg" alt="Portfolio Image" class="img-fluid">
+                     <a href=“https://drive.google.com/file/d/1rgN0Io2al79UAjnfsGlD9aP_WVXz4IPd/view?usp=drive_link”><img src=“assets/img/portfolio/thumbnails/1.jpg”></a> 
                             <div class="portfolio-box-caption">
                                 <div class="project-category text-white-50">Project 1</div>
                                 <div class="project-name">Philadelphia Schools & Bike Network</div>
